# command-line-rust-book

./: README.md
self-taught/codex-highlight/: Cargo.toml  example.py
self-taught/codex-highlight/src/: main.rs
self-taught/hello-logfire/: Cargo.toml
self-taught/hello-logfire/src/: main.rs
self-taught/hello-python-ast/: Cargo.toml
self-taught/hello-python-ast/src/: main.rs
self-taught/repeat/: Cargo.toml  pyproject.toml
self-taught/repeat/src/: main.rs
self-taught/repeat/tests/: cli.rs
self-taught/repeatpy/: Cargo.toml  pyproject.toml
self-taught/repeatpy/src/: lib.rs
self-taught/repeatrs/: Cargo.toml  pyproject.toml
self-taught/repeatrs/tests/: cli.rs
